# myautomake

./: .cproject  .project  Makefile.am  bootstrap.sh  cleanup.sh  configure.ac
docs/: Makefile.am  myautomake.1
src/: Makefile.am  hexdump.c  myautomake.c
src/include/: utils.h
src/utils/: utils.c
