#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(myautomake, 17.07, abc@my.com)
AC_CONFIG_SRCDIR([src/myautomake.c])

AM_INIT_AUTOMAKE(1.9.5)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stddef.h stdint.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 docs/Makefile
                 src/Makefile])
AC_OUTPUT
